--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
             <a href="#preguntas" class="nav-link">Preguntas Frecuentes</a>
             <a href="#recoleccion" class="nav-link">Recolección a Domicilio</a>
             <a href="gato.html" class="nav-link">Juego de Lactancia</a>
+             <a href="control.html" class="nav-link">Control Lactancia</a>
             <a href="#contacto" class="nav-link">Contacto</a>
         </div>
     </nav>
@@ -801,3 +802,4 @@
     </script>
 </body>
 </html>
+
